# SoliGuard

./: .gitattributes  .gitignore  README.md  build_exe.spec  build_installer.spec  installer.iss  pyproject.toml  requirements.txt  run_agent.py  run_gui.py  run_installer.py
.github/workflows/: test.yml
assets/brand/: README.md
examples/: sample_config.py  sample_config_masked.py  sample_config_masked_masked.py  고객명단.csv  고객명단.xlsx  고객요청서.hwpx  고객요청서_masked.hwpx  직원_신원정보.txt
soliguard/: __init__.py  __main__.py  actions.py  app.py  cli.py  config.py  design_extractors.py  engine.py  extractors.py  figma_scan.py  fonts.py  gui.py  icons.py  installer.py  onboarding.py  paths.py  profiles.py  report.py  results_store.py  scanner.py  scheduler.py  theme.py  updates.py
soliguard/detection/: __init__.py  base.py  detectors.py  engine.py  validators.py  whitelist.py
soliguard/docs/: Install.html  SoliGuard.html  솔리가드_PSD픽스처_FigmaUI_테스트CI.md  솔리가드_구현산출물.md  솔리가드_디자이너프로파일_사양서갱신_테스트.md  솔리가드_디자인토큰_GUI확장_매뉴얼.md  솔리가드_디자인파일검사_분석.md  솔리가드_디자인파일검사_분석_및_구현.md  솔리가드_백엔드파이프라인_목업스펙.md  솔리가드_상용UIUX설계서.md  솔리가드_앱골격_테스트_리포트.md  솔리가드_제품기획서.md  솔리가드_패키징_배포_자동실행.md  솔리가드_화면흐름설계서.md
soliguard/ui/: __init__.py  settings_figma.py
tests/: test_actions.py  test_config.py  test_design_extractors.py  test_engine.py  test_extractors.py  test_field_context.py  test_figma_scan.py  test_profiles.py  test_report.py  test_role_profiles.py  test_run_scan.py  test_scanner.py  test_scheduler.py  test_theme.py  test_validators.py
tests/fixtures/: generate_psd_fixtures.py
(+12 files in other folders)
